More code cleanup, mostly removing else clause and adding overrides